docs/versioned_docs/version-3.5.0-LTS/setup/choose-your-tooljet.md
---
id: choose-your-tooljet
title: Deployment Version
---

ToolJet versions are categorized into three main types: **Long-Term Support (LTS)**, **Pre-Release**, and **Past versions**. Understanding these categories helps users choose the most suitable version for their needs.

## Long-Term Support (LTS) Versions

We highly recommend using LTS versions for most users. These versions are prioritized for bug fixes, updates, and overall stability, ensuring a reliable experience. LTS versions are ideal for production environments where stability and consistent performance are crucial.

Please find the latest LTS version here: <br/>
[Docker Hub - LTS Versions](https://hub.docker.com/r/tooljet/tooljet/tags?page_size=&ordering=&name=ee-lts)

:::info
Starting from **`v3.5.0-ee-lts`** all releases are AI releases. Checkout the **[Build with AI](/docs/build-with-ai/overview)** section for more information. If you have any questions feel free to join our [Slack Community](https://join.slack.com/t/tooljet/shared_invite/zt-2rk4w42t0-ZV_KJcWU9VL1BBEjnSHLCA) or send us an email at hello@tooljet.com.
:::

| Version                                                                                                                                                                           | Release Date      | Docker Pull Command                            |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------- | ---------------------------------------------- |
| Latest EE-LTS                                                                                                                                                                     | N/A               | `docker pull tooljet/tooljet:ee-lts-latest`    |
| [v3.5.67-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.67-ee-lts/images/sha256-dabcc0f9be58d85ab070213311890265b2b41f98cb57932dbdd0ae4ae6ad8d76?context=explore)     | July 4, 2025      | `docker pull tooljet/tooljet:v3.5.67-ee-lts`   |
| [v3.5.66-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.66-ee-lts/images/sha256-5b58537cf624f19881e44972363cc771b4e75991870a8177e52690454403871b?context=explore)     | July 3, 2025      | `docker pull tooljet/tooljet:v3.5.66-ee-lts`   |
| [v3.5.65-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.65-ee-lts/images/sha256-9f13ed2e07b7039c5763a0eb5ffe660e6d6ad011f28ebd7d88a875afc71024b5?context=explore)     | July 2, 2025      | `docker pull tooljet/tooljet:v3.5.65-ee-lts`   |
| [v3.5.64-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.64-ee-lts/images/sha256-9c119acbd04cfbd9b7a4869a0815364dcc602a53481160855caa0e5011dd0cb5?context=explore)     | July 2, 2025      | `docker pull tooljet/tooljet:v3.5.64-ee-lts`   |
| [v3.5.63-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.63-ee-lts/images/sha256-a87737c5df3df9b49d59a6690f7f2e341ff323ee5884f640e5a39479761aa3a7?context=explore)     | June 30, 2025     | `docker pull tooljet/tooljet:v3.5.63-ee-lts`   |
| [v3.5.62-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.62-ee-lts/images/sha256-5682ae48e7969d8b72ff233b90f7024d6bab76faaa635f9fae2d2f559702c2a5?context=explore)     | June 27, 2025     | `docker pull tooljet/tooljet:v3.5.62-ee-lts`   |
| [v3.5.61-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.61-ee-lts/images/sha256-61082bcd868458b141e6cf7aa4ea03331f96ebfa5ff360e68b8bb0470bc31733?context=explore)     | June 26, 2025     | `docker pull tooljet/tooljet:v3.5.61-ee-lts`   |
| [v3.5.60-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.60-ee-lts/images/sha256-ad910869feb8774913092bf9972d5f292b7707a325dc93a4c531563beac33d5a?context=explore)     | June 26, 2025     | `docker pull tooljet/tooljet:v3.5.60-ee-lts`   |
| [v3.5.59-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.59-ee-lts/images/sha256-2c47dbbe11c88624c56a79e17d5600aedcd3eaa64f0e464a1b1ea507898de009?context=explore)     | June 25, 2025     | `docker pull tooljet/tooljet:v3.5.59-ee-lts`   |
| [v3.5.58-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.58-ee-lts/images/sha256-e70e4a654b39a71b0c1b2e463600df316b44c9106c02684ad7faf425113c6563?context=explore)     | June 24, 2025     | `docker pull tooljet/tooljet:v3.5.58-ee-lts`   |
| [v3.5.57-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.57-ee-lts/images/sha256-4e036f1b132bcc5faf3c04c6f3de40a03974cdca167d93fb8c100f039303905f?context=explore)     | June 23, 2025     | `docker pull tooljet/tooljet:v3.5.57-ee-lts`   |
| [v3.5.56-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.56-ee-lts/images/sha256-a0614ef03f6a36a6af4eb60edb4efa3b32c5891aefc6674a3d73fb145eb2e02b?context=explore)     | June 20, 2025     | `docker pull tooljet/tooljet:v3.5.56-ee-lts`   |
| [v3.5.55-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.55-ee-lts/images/sha256-374b5ade2cb5032de88cca4154553ed77c5776334d41d93e0ed971a5a543aae8?context=explore)     | June 20, 2025     | `docker pull tooljet/tooljet:v3.5.55-ee-lts`   |
| [v3.5.54-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.54-ee-lts/images/sha256-3a17ac80e6e583e68b76d6c4d7bff36cb66f37e334553746e8ead38674157f47?context=explore)     | June 18, 2025     | `docker pull tooljet/tooljet:v3.5.54-ee-lts`   |
| [v3.5.53-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.53-ee-lts/images/sha256-085ef8824d4d581dd341e79acc71cfe1a494dfbc4e6090a5a6576de49ec35a49?context=explore)     | June 17, 2025     | `docker pull tooljet/tooljet:v3.5.53-ee-lts`   |
| [v3.5.52-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.52-ee-lts/images/sha256-36444829313015059a338a407471434ac0d2d14c6ffe26a57f8b765fbd195b9e?context=explore)     | June 16, 2025     | `docker pull tooljet/tooljet:v3.5.52-ee-lts`   |
| [v3.5.51-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.51-ee-lts/images/sha256-aa1864abe36a365607b3399d32942c08757926f2f501922e914b9fa7896ac300?context=explore)     | June 13, 2025     | `docker pull tooljet/tooljet:v3.5.51-ee-lts`   |
| [v3.5.50-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.50-ee-lts/images/sha256-38b120ee963d8af8f16afb126c8eca646f2f567082ce5c6625b29a13c801ec10?context=explore)     | June 13, 2025     | `docker pull tooljet/tooljet:v3.5.50-ee-lts`   |
| [v3.5.49-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.49-ee-lts/images/sha256-91bf1740635d2121f4d67987c9992370b0f72693b23458eeadfffe9ee2310b24?context=explore)     | June 11, 2025     | `docker pull tooljet/tooljet:v3.5.49-ee-lts`   |
| [v3.5.48-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.48-ee-lts/images/sha256-2616637955700d94460ef5d736cda1f8bd5c269795eab35e03d3c19903bff254?context=explore)     | June 4, 2025      | `docker pull tooljet/tooljet:v3.5.48-ee-lts`   |
| [v3.5.47-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.47-ee-lts/images/sha256-032f41542309dfe40c0d66090e9ca795539f7356ac1fa0c7192741550b8b526e?context=explore)     | June 3, 2025      | `docker pull tooljet/tooljet:v3.5.47-ee-lts`   |
| [v3.5.46-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.46-ee-lts/images/sha256-e341dd0fee58dafd05147b84bb732e7d0ee0c64c90cb7ced87d3cdcce88b1ee4?context=explore)     | June 2, 2025      | `docker pull tooljet/tooljet:v3.5.46-ee-lts`   |
| [v3.5.45-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.45-ee-lts/images/sha256-1c3a86c9104e4e2a4c86cec2e54865ab9fa11bc3b2358deae5ccab1fcb25c932?context=explore)     | May 30, 2025      | `docker pull tooljet/tooljet:v3.5.45-ee-lts`   |
| [v3.5.44-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.44-ee-lts/images/sha256-79708e8e8058a8ae43f2c147cb7826be7ccaebfcbeeb979dbe50fcae735c0ae1?context=explore)     | May 29, 2025      | `docker pull tooljet/tooljet:v3.5.44-ee-lts`   |
| [v3.5.43-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.43-ee-lts/images/sha256-09bbe0fc9eceba7e80f6a42fd3ff4bb1eb79ca20fa4230d61e6d9473fcced77c?context=explore)     | May 27, 2025      | `docker pull tooljet/tooljet:v3.5.43-ee-lts`   |
| [v3.5.42-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.42-ee-lts/images/sha256-880623c739321edc603fb609f378dedd373598ced8854c51f6551a894d36db3c?context=explore)     | May 22, 2025      | `docker pull tooljet/tooljet:v3.5.42-ee-lts`   |
| [v3.5.41-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.41-ee-lts/images/sha256-3c153fdc4136306d598510c8056f8abcb32f2880e64e45ea50cf5214cb302b4d?context=explore)     | May 21, 2025      | `docker pull tooljet/tooljet:v3.5.41-ee-lts`   |
| [v3.5.39-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.39-ee-lts/images/sha256-39845a8352c1ccbd19d2982827f856f2c4fe3ee890e0e596a720ed0c605f0761?context=explore)     | May 19, 2025      | `docker pull tooljet/tooljet:v3.5.39-ee-lts`   |
| [v3.5.38-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.38-ee-lts/images/sha256-a65d36bad57060c7b32d08f5a858f45ed116a97d1e0ba7951b7f9fe88d5eedee?context=explore)     | May 19, 2025      | `docker pull tooljet/tooljet:v3.5.38-ee-lts`   |
| [v3.5.37-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.37-ee-lts/images/sha256-e3a0f78e41980c9647a5eb45ec31040413655d8ef3ecba2c91014cfd8f61dc5f?context=explore)     | May 15, 2025      | `docker pull tooljet/tooljet:v3.5.37-ee-lts`   |
| [v3.5.36-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.36-ee-lts/images/sha256-0652dbf9872b67fd7e079273e734a1a06104c59f2b4623c2613ee4dfebafb015?context=explore)     | May 7, 2025       | `docker pull tooljet/tooljet:v3.5.36-ee-lts`   |
| [v3.5.35-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.35-ee-lts/images/sha256-7b97465a74a7e513fc2f4b685bc75883ed29e4f1894053202044e7fef90de4e2?context=explore)     | May 2, 2025       | `docker pull tooljet/tooljet:v3.5.35-ee-lts`   |
| [v3.5.34-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.34-ee-lts/images/sha256-0101d844336a5a791540612389d4ac523a30db2ca1202d40356e30bd765ddeac?context=explore)     | April 30, 2025    | `docker pull tooljet/tooljet:v3.5.34-ee-lts`   |
| [v3.5.33-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.33-ee-lts/images/sha256-5aabd18911018c334cbd5977b36d132e146efc08c54ea345a8cf0fdb7de11f29?context=explore)     | April 28, 2025    | `docker pull tooljet/tooljet:v3.5.33-ee-lts`   |
| [v3.5.32-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.32-ee-lts/images/sha256-51a0d4f6c199a3247ee0dc5e40bd7a5791525ca3d40ef93acd4ef8a5e18b5f59?context=explore)     | April 24, 2025    | `docker pull tooljet/tooljet:v3.5.32-ee-lts`   |
| [v3.5.31-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.31-ee-lts/images/sha256-c7b9abb1033a66f2b7a101cdbb89456e20908025df7e60ef78ac0ba8fe8c329e?context=explore)     | April 23, 2025    | `docker pull tooljet/tooljet:v3.5.31-ee-lts`   |
| [v3.5.30-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.30-ee-lts/images/sha256-c81dd0d10199321468642114579ac9dda2f0a585fffde2c6435f613cf8315ce6?context=explore)     | April 21, 2025    | `docker pull tooljet/tooljet:v3.5.30-ee-lts`   |
| [v3.5.29-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.29-ee-lts/images/sha256-00a9429fe0cf88e7bf84c61aa7ce1e6d6639a02bae2b78172906563cac5d9045?context=explore)     | April 15, 2025    | `docker pull tooljet/tooljet:v3.5.29-ee-lts`   |
| [v3.5.28-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.28-ee-lts/images/sha256-702ee2c07cfae046e8738c271b98bfcb186c19a3dd6a7475360f0ef78a424544?context=explore)     | April 15, 2025    | `docker pull tooljet/tooljet:v3.5.28-ee-lts`   |
| [v3.5.27-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.27-ee-lts/images/sha256-8fff9509c919c2020d540606fe768cbec30b2791dec9adbc3bbf59e3f99124e2?context=explore)     | April 15, 2025    | `docker pull tooljet/tooljet:v3.5.27-ee-lts`   |
| [v3.5.26-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.26-ee-lts/images/sha256-814cf518e246b3890bbe5480d4d0c99a70a14666f3d000883863005ca3990d42?context=explore)     | April 14, 2025    | `docker pull tooljet/tooljet:v3.5.26-ee-lts`   |
| [v3.5.25-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.25-ee-lts/images/sha256-0fc791aa431191b99d40f49f367043a0948fb2b2abe88c065e17a9de29167643?context=explore)     | April 11, 2025    | `docker pull tooljet/tooljet:v3.5.25-ee-lts`   |
| [v3.5.24-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.24-ee-lts/images/sha256-9c481106b2b54e8092e06cb80c4d5dcb52dd5a0a58b4e9894efc18d35e301033?context=explore)     | April 11, 2025    | `docker pull tooljet/tooljet:v3.5.24-ee-lts`   |
| [v3.5.23-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.23-ee-lts/images/sha256-0dbfb1103afc870e6978f229770538e3dd895eaf931780c610e3649284bab4ac?context=explore)     | April 9, 2025     | `docker pull tooljet/tooljet:v3.5.23-ee-lts`   |
| [v3.5.22-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.22-ee-lts/images/sha256-7252e8fec636b566d455e6bc4d3ee2b155f00388e30b54a0893f282b0041a9ab?context=explore)     | April 9, 2025     | `docker pull tooljet/tooljet:v3.5.22-ee-lts`   |
| [v3.5.21-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.21-ee-lts/images/sha256-afcf9f873f5ce08ba0c582493e5a5765a11222e575e5cc35cc155176ef695b8b?context=explore)     | April 4, 2025     | `docker pull tooljet/tooljet:v3.5.21-ee-lts`   |
| [v3.5.20-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.20-ee-lts/images/sha256-f2797b97a48e8ce976fc075ffc970c0933d12247db2f69361dbea1ad8ed83cc7?context=explore)     | April 2, 2025     | `docker pull tooljet/tooljet:v3.5.20-ee-lts`   |
| [v3.5.19-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.19-ee-lts/images/sha256-d60b4a32c1e6e082875ec6dbb0fef988b659dc12f9d019b0c5d103e0703ed17d?context=explore)     | March 28, 2025    | `docker pull tooljet/tooljet:v3.5.19-ee-lts`   |
| [v3.5.18-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.18-ee-lts/images/sha256-69b821e3247286ab824eb95ef560b10a97811f865a693323c9051d382b3676e5?context=explore)     | March 27, 2025    | `docker pull tooljet/tooljet:v3.5.18-ee-lts`   |
| [v3.5.17-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.17-ee-lts/images/sha256-f3f85e1b50585d3bac498f7b1447d90410717d7b057728118562678eef6e5db9?context=explore)     | March 25, 2025    | `docker pull tooljet/tooljet:v3.5.17-ee-lts`   |
| [v3.5.16-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.16-ee-lts/images/sha256-4c939260ffcf3a0a7a9c66bd9fe7302d6c4725dcf4996d51cc9f393022504500?context=explore)     | March 25, 2025    | `docker pull tooljet/tooljet:v3.5.16-ee-lts`   |
| [v3.5.15-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.15-ee-lts/images/sha256-fdefe0cf0fc4e8030abe8a946ade4d15c01c2936190395c084859200c5d120eb?context=explore)     | March 24, 2025    | `docker pull tooljet/tooljet:v3.5.15-ee-lts`   |
| [v3.5.14-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.14-ee-lts/images/sha256-9df1a5637cd2258605ded8c5440892b5ba235a148bc7053cd8f3ce25d542ce97?context=explore)     | March 20, 2025    | `docker pull tooljet/tooljet:v3.5.14-ee-lts`   |
| [v3.5.13-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.13-ee-lts/images/sha256-af19fec47085c4ee5af02d474d9b1362580c11840a0e8c157facd525cf005d0d?context=explore)     | March 19, 2025    | `docker pull tooljet/tooljet:v3.5.13-ee-lts`   |
| [v3.5.12-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.12-ee-lts/images/sha256-b929ba2c10c9ffcf46b07bc7ce45d333aba1defe224a4eb714638c3e0bfd4766?context=explore)     | March 17, 2025    | `docker pull tooljet/tooljet:v3.5.12-ee-lts`   |
| [v3.5.11-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.11-ee-lts/images/sha256-d742fbda556ec1820d4b18339971c5ecf81f1f4c2b58b71f1f44c3208e1ee225?context=explore)     | March 13, 2025    | `docker pull tooljet/tooljet:v3.5.11-ee-lts`   |
| [v3.5.10-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.10-ee-lts/images/sha256-86e1a086d24cd2942c083567ade0ef3240ae37e303d946da41acee0051200335?context=explore)     | March 10, 2025    | `docker pull tooljet/tooljet:v3.5.10-ee-lts`   |
| [v3.5.9-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.9-ee-lts/images/sha256-cbe7bcdbced9b0146b825974a9ab0666e3e5f6cb87dc58396eda9db2b8834dee?context=explore)       | March 5, 2025     | `docker pull tooljet/tooljet:v3.5.9-ee-lts`    |
| [v3.5.8-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.8-ee-lts/images/sha256-751411790e93494fb94579be18bbb4333ebdfef21a1a54d755b19ec963241602?context=explore)       | March 4, 2025     | `docker pull tooljet/tooljet:v3.5.8-ee-lts`    |
| [v3.5.7-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.7-ee-lts/images/sha256-685ca4218b3b9672ef4f68a51532198c5de7efd82bfa189fd28dca993bbe6b87?context=explore)       | February 28, 2025 | `docker pull tooljet/tooljet:v3.5.7-ee-lts`    |
| [v3.5.6-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.6-ee-lts/images/sha256-d531169bee0a3b4806470d5fbee02457226f8fbe2e6a265a16fc9a51b7cf68bf?context=explore)       | February 27, 2025 | `docker pull tooljet/tooljet:v3.5.6-ee-lts`    |
| [v3.5.5-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.5-ee-lts/images/sha256-fa696bae6dde0fa2ff5f644c22c023298524f81087aef180863e9f8ae052da07?context=explore)       | February 27, 2025 | `docker pull tooljet/tooljet:v3.5.5-ee-lts`    |
| [v3.5.4-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.4-ee-lts/images/sha256-a501ed3e579cb75c5c7da07132a7f54b8f4674d8e2ca3aa7d80bb78b29e4a73e?context=explore)       | February 25, 2025 | `docker pull tooljet/tooljet:v3.5.4-ee-lts`    |
| [v3.5.3-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.3-ee-lts/images/sha256-f384bf398977f3419c4fa8c19b19715d198f8665925252a78000e1d51fb1fb3b?context=explore)       | February 21, 2025 | `docker pull tooljet/tooljet:v3.5.3-ee-lts`    |
| [v3.5.2-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.2-ee-lts/images/sha256-ffda62f2552806b3d4f159bd9bd5e80805c56cc48d408fb225c63da4b8afbaed?context=explore)       | February 19, 2025 | `docker pull tooljet/tooljet:v3.5.2-ee-lts`    |
| [v3.5.1-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.1-ee-lts/images/sha256-105a541d48c3645b82748e4cc6a19f4c118579eb02edfb0e0cb738e4cc27303a?context=explore)       | February 17, 2025 | `docker pull tooljet/tooljet:v3.5.1-ee-lts`    |
| [v3.5.0-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.5.0-ee-lts/images/sha256-9580d2377d17ce0c26fca0535eca51bce899015f26bfc81769d032b4b15a5da5?context=explore)       | February 11, 2025 | `docker pull tooljet/tooljet:v3.5.0-ee-lts`    |
| [v3.0.37-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.37-ee-lts/images/sha256-7a9753f608caa8c8f8192ef4c7d7ae6f8ce3361c28595ec77905ad972535cb04?context=explore)     | March 3, 2025     | `docker pull tooljet/tooljet:v3.0.37-ee-lts`   |
| [v3.0.36-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.36-ee-lts/images/sha256-e106c981a4f70627e8774ba555f8be523e7771eee1eef34f917affb8d97d6dad?context=explore)     | February 26, 2025 | `docker pull tooljet/tooljet:v3.0.36-ee-lts`   |
| [v3.0.35.1-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.35.1-ee-lts/images/sha256-9c1e0c015f9b88e95773d65632d59bdb84323901c516dad3f46578fd75680c57?context=explore) | March 20, 2025    | `docker pull tooljet/tooljet:v3.0.35.1-ee-lts` |
| [v3.0.35-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.35-ee-lts/images/sha256-5d668fbc0c3af624b8bfdbe14cfb7688eade5b5f301b3a16bb9a11675fd93eb3?context=explore)     | February 7, 2025  | `docker pull tooljet/tooljet:v3.0.35-ee-lts`   |
| [v3.0.34-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.34-ee-lts/images/sha256-f2aa34c212277c7e46a5eb4a1de31fde33e8b2adea0cf6a39df1d195713e07b4?context=explore)     | February 7, 2025  | `docker pull tooljet/tooljet:v3.0.34-ee-lts`   |
| [v3.0.33-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.33-ee-lts/images/sha256-d2c66f0b7424551ef82d993a4ecb7b285c91a72d993eddc5b91746279fe1a1d6?context=explore)     | January 31, 2025  | `docker pull tooljet/tooljet:v3.0.33-ee-lts`   |
| [v3.0.32-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.32-ee-lts/images/sha256-ed31188b9c652f5528bb5dd577c20ea22193d5777cce10c935df7eecdb0762be?context=explore)     | January 31, 2025  | `docker pull tooljet/tooljet:v3.0.32-ee-lts`   |
| [v3.0.31-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.31-ee-lts/images/sha256-6b6763db186d4b6faed94cd181ff6b95c417ee52821602e62da78e190d19642d?context=explore)     | January 28, 2025  | `docker pull tooljet/tooljet:v3.0.31-ee-lts`   |
| [v3.0.30-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.30-ee-lts/images/sha256-4478cab74e3200b2420b7a650857c5a63f2bbaf89a8a9a118be51d514cd13530?context=explore)     | January 22, 2025  | `docker pull tooljet/tooljet:v3.0.30-ee-lts`   |
| [v3.0.29-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.29-ee-lts/images/sha256-09d358366f2963948d89b2a8ee651a8b14d5bb92e5610dad54dc75f48ae146b3?context=explore)     | January 17, 2025  | `docker pull tooljet/tooljet:v3.0.29-ee-lts`   |
| [v3.0.28-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.28-ee-lts/images/sha256-b8cace03e5b0c9981db3d123328ee6041a126a26f6326ad95805c01ad02c4c80?context=explore)     | January 15, 2025  | `docker pull tooljet/tooljet:v3.0.28-ee-lts`   |
| [v3.0.27-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.27-ee-lts/images/sha256-eef7588e2cad15849f48be9b3afb1fbefc50c9431c5df55fa2932d87297c49d8?context=explore)     | January 10, 2025  | `docker pull tooljet/tooljet:v3.0.27-ee-lts`   |
| [v3.0.26-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.26-ee-lts/images/sha256-ba5db50e647b91de728521d0b0cfb753642490f0ccdc902824ce194613b8c8ab?context=explore)     | January 9, 2025   | `docker pull tooljet/tooljet:v3.0.26-ee-lts`   |
| [v3.0.25-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.25-ee-lts/images/sha256-899a96453fcbab0fb17e0cf7ebdce0b9be658d21ae38779ce5f8178d759ef381?context=explore)     | January 8, 2025   | `docker pull tooljet/tooljet:v3.0.25-ee-lts`   |
| [v3.0.24-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.24-ee-lts/images/sha256-33494c8ee72c440ce0ded925cdeb15507cd87f2b7c3fe172dd1cbee790e3b96f?context=explore)     | January 3, 2025   | `docker pull tooljet/tooljet:v3.0.24-ee-lts`   |
| [v3.0.23-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.23-ee-lts/images/sha256-1ca2bcb5dac66b1d3d089bd8300b7077c0dcd27bb2cfe6665bf388b680294467?context=explore)     | January 2, 2025   | `docker pull tooljet/tooljet:v3.0.23-ee-lts`   |
| [v3.0.22-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.22-ee-lts/images/sha256-fc2bca053802e06a09858b65c2a5f47f1cb0ece2d156ca9b0dd1c37c60d5d2b8?context=explore)     | December 30, 2024 | `docker pull tooljet/tooljet:v3.0.22-ee-lts`   |
| [v3.0.21-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.21-ee-lts/images/sha256-88de45e3e32df48c7451a9f6ae505f985ca7a32d2b59c3a4ba9f9da992e8cafe?context=explore)     | December 20, 2024 | `docker pull tooljet/tooljet:v3.0.21-ee-lts`   |
| [v3.0.20-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.20-ee-lts/images/sha256-898f75a8c6a879014b890a47fa8fd6d2be41ea7f77d549bc2616e0db84788fd2?context=explore)     | December 20, 2024 | `docker pull tooljet/tooljet:v3.0.20-ee-lts`   |
| [v3.0.19-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.19-ee-lts/images/sha256-eb873525f3fe3a5838fcf72d38d1b9d4ffcb661f59e9af4c466f0041de882a0e?context=explore)     | December 17, 2024 | `docker pull tooljet/tooljet:v3.0.19-ee-lts`   |
| [v3.0.18-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.18-ee-lts/images/sha256-89e309a8a3a40c967e3bddfbb82adff9332d6b72322cf5ad40f575c03bf7dab1?context=explore)     | December 12, 2024 | `docker pull tooljet/tooljet:v3.0.18-ee-lts`   |
| [v3.0.17-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.17-ee-lts/images/sha256-0777d52d83a93b3729f8a9b1e6e63a66e9e7bef913adad5eda655a9a009540e0?context=explore)     | December 9, 2024  | `docker pull tooljet/tooljet:v3.0.17-ee-lts`   |
| [v3.0.16-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.16-ee-lts/images/sha256-9602149f5538af46288f6a33c9c239c336444781ee308c8866d3dca3a747660f?context=explore)     | December 9, 2024  | `docker pull tooljet/tooljet:v3.0.16-ee-lts`   |
| [v3.0.15-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.15-ee-lts/images/sha256-1fc16533d34695715debb1f3394b18a18431342c1b0d82ff168c5e936cff5d2e?context=explore)     | December 5, 2024  | `docker pull tooljet/tooljet:v3.0.15-ee-lts`   |
| [v3.0.14-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.14-ee-lts/images/sha256-aa12b3de3d09e4c1122050ee2dd0550152d7d7777d4f75953f4e9d55d652aa2f?context=explore)     | December 3, 2024  | `docker pull tooljet/tooljet:v3.0.14-ee-lts`   |
| [v3.0.13-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.13-ee-lts/images/sha256-1e469017cb03245eb1ad457219ac60a293d0f9e1b365d0dabf77cf4272cabe58?context=explore)     | December 2, 2024  | `docker pull tooljet/tooljet:v3.0.13-ee-lts`   |
| [v3.0.12-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.12-ee-lts/images/sha256-7c0aec97e1d630c827d42b21fb9aee853730ea72026f4c89630b6f2f6ce4bca5?context=explore)     | November 29, 2024 | `docker pull tooljet/tooljet:v3.0.12-ee-lts`   |
| [v3.0.11-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.11-ee-lts/images/sha256-2c102a11d7f497804586368e2e1f350ee386551c7ab5063b298aa68c9c5853dd?context=explore)     | November 29, 2024 | `docker pull tooljet/tooljet:v3.0.11-ee-lts`   |
| [v3.0.10-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.10-ee-lts/images/sha256-4839e8f18427b47859287c76058a0964d029eeaf8f4c4825c7d77fdb371eb857?context=explore)     | November 28, 2024 | `docker pull tooljet/tooljet:v3.0.10-ee-lts`   |
| [v3.0.9-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.9-ee-lts/images/sha256-bec9665a3ef51acbf8e93c5ebc47227dc4fd6cb8084d4ad811a808a46edb743d?context=explore)       | November 27, 2024 | `docker pull tooljet/tooljet:v3.0.9-ee-lts`    |
| [v3.0.8-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.8-ee-lts/images/sha256-8b4658e7d5c8f795b55d4187cc6acddabb9463e33bb62624d0ce3710c887ef0c?context=explore)       | November 27, 2024 | `docker pull tooljet/tooljet:v3.0.8-ee-lts`    |
| [v3.0.7-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.7-ee-lts/images/sha256-4e5e2b52279a127a001c1c7e93893794799fe8cdb40b15203220d030d4c415ce?context=explore)       | November 26, 2024 | `docker pull tooljet/tooljet:v3.0.7-ee-lts`    |
| [v3.0.6-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.6-ee-lts/images/sha256-52632c7d70f6334c84d7e3945bf118a4a627eb0081f29420eb3af7788e53f989?context=explore)       | November 26, 2024 | `docker pull tooljet/tooljet:v3.0.6-ee-lts`    |
| [v3.0.5-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.5-ee-lts/images/sha256-daa03ea3ef9a6a94032476fae0f57f6828869863690346fa325a5937746fe5f6?context=explore)       | November 25, 2024 | `docker pull tooljet/tooljet:v3.0.5-ee-lts`    |
| [v3.0.4-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.4-ee-lts/images/sha256-7dc2041bdb98674f1058381fbbc93d167ba1a66238e642c6f0cb599987a87ec1?context=explore)       | November 20, 2024 | `docker pull tooljet/tooljet:v3.0.4-ee-lts`    |
| [v3.0.3-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.3-ee-lts/images/sha256-ba3596677cfb885a91197c1187191afb6eabd7dd8f7f6fdb20514ce716182f8f?context=explore)       | November 18, 2024 | `docker pull tooljet/tooljet:v3.0.3-ee-lts`    |
| [v3.0.2-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.2-ee-lts/images/sha256-6cb558e5e3337c7fc1b9ffc830ce7096f19253ff5f2fad177afdb46fb0b0ea9d?context=explore)       | November 13, 2024 | `docker pull tooljet/tooljet:v3.0.2-ee-lts`    |
| [v3.0.1-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.1-ee-lts/images/sha256-b4f2e0779f76db07606ddd8a688cb7e06824837be3f507026ff91bb235efcc1d?context=explore)       | November 12, 2024 | `docker pull tooljet/tooljet:v3.0.1-ee-lts`    |
| [v3.0.0-ee-lts](https://hub.docker.com/layers/tooljet/tooljet/v3.0.0-ee-lts/images/sha256-989f1370c502e97555dd7e669f896ef6ba2ad1d4f317c53335105bf937b5b189?context=explore)       | November 12, 2024 | `docker pull tooljet/tooljet:v3.0.0-ee-lts`    |

:::info
Users are encouraged to upgrade to the latest LTS version to ensure they benefit from the latest improvements and maintain a secure and efficient environment.
:::

## Pre-Release Versions

Pre-Release versions are designed for those looking to explore the latest features and advancements in ToolJet. These versions are experimental and may include new functionalities not yet available in LTS versions. However, due to their experimental nature, they may also contain bugs and lack the stability of LTS versions. Therefore, we advise against using Pre-Release versions in production environments.

_All versions starting from **3.1.x.x** are considered Pre-Release versions._

## Past versions (Not maintained anymore)

Past versions of ToolJet are those that are no longer actively maintained or supported. These versions may still be available but are not recommended, especially in production environments, as they do not receive updates, bug fixes, or security patches.
